--- a/Pages/Service/Report.razor
+++ b/Pages/Service/Report.razor
@@ -26,7 +26,7 @@
                 <div class="card card-body bg-light text-center mb-4">
                     <h4 class="card-title">Report description</h4>
                     <div class="form-floating">
-                        <InputTextArea rows="15" disabled="@DisableInput" placeholder="Detailed report description..." class="form-control" id="title" @bind-Value="report.Title"></InputTextArea>
+                        <InputTextArea rows="15" disabled="@DisableInput" placeholder="Detailed report description..." class="form-control h-100" id="title" @bind-Value="report.Description"></InputTextArea>
                         <label>Description</label>
                     </div>
                 </div>
