--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -21,7 +21,7 @@
                     <AuthorizeView Roles="ADMINISTRATOR" Context="AdminView">
                         <Authorized>
                             <div class="nav-item px-3 col-12">
-                                <NavLink class="nav-link" href="service_reports">
+                                <NavLink class="nav-link" href="reports">
                                     <span class="oi oi-question-mark" aria-hidden="true"></span> Service reports
                                 </NavLink>
                             </div>
