--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -62,15 +62,8 @@
                             </div>
                             <div class="row mb-4 mt-5">
                                 <div class="col-md-12 col-sm-12">
-                                    <div class="card card-body bg-light">
-                                        <h3 class="card-title">Service reports</h3>
-                                        <h4 class="card-text">No reports</h4>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row mb-4">
-                                <div class="col-md-12 col-sm-12">
-                                    <ServiceStatusCard />
+                                    <LinkCard Link="reports" CardTitle="Service Reports" CardText="@Reports.ToString()">
+                                    </LinkCard>
                                 </div>
                             </div>
                         </div>
@@ -81,6 +74,18 @@
                         @if (Doctor != null)
                         {
                             <div class="col-12">
+                                <div class="row mb-4">
+                                    <div class="col-md-6 col-sm-12">
+                                        <LinkCard Link="@("my_patients" + UUID)" CardTitle="My Patients" CardText="@Patients.ToString()">
+                                            <span class="medical-icon-i-inpatient" style="color: cornflowerblue"></span>
+                                        </LinkCard>
+                                    </div>
+                                    <div class="col-md-6 col-sm-12">
+                                        <LinkCard Link="@("my_requests" + UUID)" CardTitle="My Requests" CardText="@Requests.ToString()">
+                                            <span class="bi bi-file-earmark-check-fill"></span>
+                                        </LinkCard>
+                                    </div>
+                                </div>
                                 <div class="row mb-4">
                                     <div class="col-md-12 col-sm-12">
                                         @if (Appointments != null)
@@ -165,6 +170,7 @@
     protected int Medicines = -1;
     protected int Companies = -1;
     protected int Issuers = -1;
+    protected int Reports = -1;
 
     private string UUID = "";
 
@@ -182,36 +188,45 @@
 
             UUID = jti;
 
-            if (role.Equals("ADMINISTRATOR"))
-            {
-                foreach (Claim claim in claims)
-                {
-                    Console.WriteLine(claim);
-                }
+            var expirationTime = DateTimeOffset.FromUnixTimeSeconds(long.Parse(exp)).DateTime;
 
-                HospitalStaff = await GetCount("api/users/doctors/count");
-                Patients = await GetCount("api/users/patients/count");
-                Administrators = await GetCount("api/users/administrators/count");
-                Medicines = await GetCount("api/medicine/count");
-                Companies = await GetCount("api/company/count");
-                Issuers = await GetCount("api/issuer/count");
-            }
-            else if (role.Equals("DOCTOR"))
+            bool expired = DateTime.Now > expirationTime;
+
+            if (!expired)
             {
-                Doctor = await Client.GetFromJsonAsync<DoctorDetailsDTO>("api/users/doctors/" + UUID);
-                Requests = await GetCount("api/request/count/" + UUID + "/AWAITING");
-                Appointments = await Client.GetFromJsonAsync<PaginatedResultDTO<ScheduleDTO>>("api/schedule/all?pageNumber=1&pageSize=25&doctor=" + UUID + "&date=" + DateOnly.FromDateTime(DateTime.Now).ToString());
-            }
-            else if (role.Equals("PATIENT"))
-            {
-                Patient = await Client.GetFromJsonAsync<PatientDetailsDTO>("api/users/patients/" + UUID);
-                Prescriptions = await GetCount("api/prescription/count?UUID=" + UUID);
-                Requests = await GetCount("api/request/count/" + UUID + "/AWAITING");
-                Appointments = await Client.GetFromJsonAsync<PaginatedResultDTO<ScheduleDTO>>("api/schedule/all?pageNumber=1&pageSize=25&patient=" + UUID + "&date=" + DateOnly.FromDateTime(DateTime.Now).ToString());
-            }
-            else
-            {
-                
+                if (role.Equals("ADMINISTRATOR"))
+                {
+                    foreach (Claim claim in claims)
+                    {
+                        Console.WriteLine(claim);
+                    }
+
+                    HospitalStaff = await GetCount("api/users/doctors/count");
+                    Patients = await GetCount("api/users/patients/count");
+                    Administrators = await GetCount("api/users/administrators/count");
+                    Medicines = await GetCount("api/medicine/count");
+                    Companies = await GetCount("api/company/count");
+                    Issuers = await GetCount("api/issuer/count");
+                    Reports = await GetCount("api/report/count");
+                }
+                else if (role.Equals("DOCTOR"))
+                {
+                    Doctor = await Client.GetFromJsonAsync<DoctorDetailsDTO>("api/users/doctors/" + UUID);
+                    Patients = Doctor.Patients.Count;
+                    Requests = await GetCount("api/request/count/" + UUID + "/AWAITING");
+                    Appointments = await Client.GetFromJsonAsync<PaginatedResultDTO<ScheduleDTO>>("api/schedule/all?pageNumber=1&pageSize=25&doctor=" + UUID + "&date=" + DateTime.Now.ToString());
+                }
+                else if (role.Equals("PATIENT"))
+                {
+                    Patient = await Client.GetFromJsonAsync<PatientDetailsDTO>("api/users/patients/" + UUID);
+                    Prescriptions = await GetCount("api/prescription/count?UUID=" + UUID);
+                    Requests = await GetCount("api/request/count/" + UUID + "/AWAITING");
+                    Appointments = await Client.GetFromJsonAsync<PaginatedResultDTO<ScheduleDTO>>("api/schedule/all?pageNumber=1&pageSize=25&patient=" + UUID + "&date=" + DateTime.Now.ToString());
+                }
+                else
+                {
+
+                }
             }
         }
     }
