Force load token from local storage, fixed refresh errors

--- a/Pages/Administrator/AdministratorDetails.razor
+++ b/Pages/Administrator/AdministratorDetails.razor
@@ -122,8 +122,8 @@
                 </a>
             </div>
             <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
-                <a href="print_administrator_details/@(administrator.UUID)" class="btn btn-lg btn-secondary w-100">
-                    Print
+                <a href="administrators" class="btn btn-lg btn-secondary w-100">
+                    Back
                 </a>
             </div>
         </div>
