--- a/Pages/Administrator/Administrators.razor
+++ b/Pages/Administrator/Administrators.razor
@@ -1,54 +1,73 @@
 ﻿@page "/administrators"
+@using Blazored.LocalStorage;
 @using ClientWebApp.Components.Tables
 @using ClientWebApp.DTOs;
+@using ClientWebApp.Features;
+@using Microsoft.AspNetCore.Components.Authorization
 
 @inject HttpClient Client
+@inject ILocalStorageService localStorage
 
-<PageTitle>Administrators - Admin</PageTitle>
 
-<div class="container text-center justify-content-center align-items-center">
-    <h1 class="display-4">Administrators</h1>
+<AuthorizeView Roles="ADMINISTRATOR">
+    <Authorized>
+        <PageTitle>Administrators - Admin</PageTitle>
 
-    @if (administrators == null || administrators.items.Count == 0)
-    {
-        <SpinnerLoader />
-    }
-    else
-    {
-        <div class="text-center justify-content-center">
-            <div class="row col-12 mb-3">
-                <div class="input-group">
-                    <input type="text" class="form-control" @bind-value="@searchString" placeholder="Type a search query..." aria-label="Type a search query..." aria-describedby="search-button">
-                    <button class="btn btn-outline-primary" @onclick="InvokeSearch" type="button" id="search-button">Search</button>
-                </div>
-            </div>
-            <div class="row col-12 mb-3">
-                <div class="col-12">
-                    <a href="new_administrator" class="btn btn-primary w-100">Add a new administrator</a>
-                </div>
-            </div>
-            <div class="row col-12 mb-3">
-                <div class="col-12">
-                    <UserTable Entity="administrators.items" Link="administrator_details"/>
-                </div>
-            </div>
-            <div class="row col-12 mb-3 justify-content-center">
-                <div class="col-1">
-                    <button disabled="@(!administrators.HasPrevious)" type="button" @onclick="GetFirst" class="btn btn-primary w-100"><div class="bi bi-chevron-double-left"></div></button>
-                </div>
-                <div class="col-1">
-                    <button disabled="@(!administrators.HasPrevious)" type="button" @onclick="GetPrevious" class="btn btn-primary w-100"><div class="bi bi-chevron-left"></div></button>
-                </div>
-                <div class="col-1">
-                    <button disabled="@(!administrators.HasNext)" type="button" @onclick="GetNext" class="btn btn-primary w-100"><div class="bi bi-chevron-right"></div></button>
-                </div>
-                <div class="col-1">
-                    <button disabled="@(!administrators.HasNext)" type="button" @onclick="GetLast" class="btn btn-primary w-100"><div class="bi bi-chevron-double-right"></div></button>
-                </div>
-            </div>
+        <div class="container text-center justify-content-center align-items-center">
+            @if (AllowView)
+            {
+                <h1 class="display-4">Administrators</h1>
+                @if (administrators == null || administrators.items.Count == 0)
+                {
+                    <SpinnerLoader />
+                }
+                else
+                {
+                    <div class="text-center justify-content-center">
+                        <div class="row col-12 mb-3">
+                            <div class="input-group">
+                                <input type="text" class="form-control" @bind-value="@searchString" placeholder="Type a search query..." aria-label="Type a search query..." aria-describedby="search-button">
+                                <button class="btn btn-outline-primary" @onclick="InvokeSearch" type="button" id="search-button">Search</button>
+                            </div>
+                        </div>
+                        <div class="row col-12 mb-3">
+                            <div class="col-12">
+                                <a href="new_administrator" class="btn btn-primary w-100">Add a new administrator</a>
+                            </div>
+                        </div>
+                        <div class="row col-12 mb-3">
+                            <div class="col-12">
+                                <UserTable Entity="administrators.items" Link="administrator_details" />
+                            </div>
+                        </div>
+                        <div class="row col-12 mb-3 justify-content-center">
+                            <div class="col-1">
+                                <button disabled="@(!administrators.HasPrevious)" type="button" @onclick="GetFirst" class="btn btn-primary w-100"><div class="bi bi-chevron-double-left"></div></button>
+                            </div>
+                            <div class="col-1">
+                                <button disabled="@(!administrators.HasPrevious)" type="button" @onclick="GetPrevious" class="btn btn-primary w-100"><div class="bi bi-chevron-left"></div></button>
+                            </div>
+                            <div class="col-1">
+                                <button disabled="@(!administrators.HasNext)" type="button" @onclick="GetNext" class="btn btn-primary w-100"><div class="bi bi-chevron-right"></div></button>
+                            </div>
+                            <div class="col-1">
+                                <button disabled="@(!administrators.HasNext)" type="button" @onclick="GetLast" class="btn btn-primary w-100"><div class="bi bi-chevron-double-right"></div></button>
+                            </div>
+                        </div>
+                    </div>
+                }
+            }
+            else
+            {
+                <h4 class="display-4">Page Not Found</h4>
+            }
         </div>
-    }
-</div>
+    </Authorized>
+    <NotAuthorized>
+        <PageTitle>Unauthorized</PageTitle>
+    </NotAuthorized>
+</AuthorizeView>
+
 
 @code {
     private PaginatedResultDTO<UserBasicDTO>? administrators;
@@ -58,9 +77,23 @@
     string searchString = "";
     string currentFilter = "";
 
+    private bool AllowView = true;
+
     protected override async Task OnInitializedAsync()
     {
-        administrators = await Client.GetFromJsonAsync<PaginatedResultDTO<UserBasicDTO>>("api/users/all/basic?pageNumber=" + currentPage + "&pageSize=" + pageSize);
+        var token = await localStorage.GetItemAsStringAsync("token");
+        var claims = JwtParser.ParseClaimsFromJwt(token);
+
+        var jti = claims.Single(c => c.Type.Equals("jti")).Value;
+        var role = claims.Single(c => c.Type.Equals("role")).Value;
+        if (role.Equals("ADMINISTRATOR"))
+        {
+            administrators = await Client.GetFromJsonAsync<PaginatedResultDTO<UserBasicDTO>>("api/users/all/basic?pageNumber=" + currentPage + "&pageSize=" + pageSize);
+        }
+        else
+        {
+            AllowView = false;
+        }
     }
 
     async Task InvokeSearch()
@@ -98,9 +131,4 @@
         administrators = null;
         administrators = await Client.GetFromJsonAsync<PaginatedResultDTO<UserBasicDTO>>("api/users/all/basic?pageNumber=" + currentPage + "&pageSize=" + pageSize + "&currentFilter=" + currentFilter);
     }
-}
-
-
-@code {
-
 }
