--- a/Pages/Company/CompanyDetails.razor
+++ b/Pages/Company/CompanyDetails.razor
@@ -87,8 +87,8 @@
                 </a>
             </div>
             <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
-                <a href="print_company_details/@(company.UUID)" class="btn btn-lg btn-secondary w-100">
-                    Print
+                <a href="companies" class="btn btn-lg btn-secondary w-100">
+                    Back
                 </a>
             </div>
         </div>
