--- a/Pages/Doctor/DoctorDetails.razor
+++ b/Pages/Doctor/DoctorDetails.razor
@@ -131,8 +131,8 @@
                 </a>
             </div>
             <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
-                <a href="print_doctor_details/@(doctor.UUID)" class="btn btn-lg btn-secondary w-100">
-                    Print
+                <a href="doctors" class="btn btn-lg btn-secondary w-100">
+                    Back
                 </a>
             </div>
         </div>
