--- a/Pages/Issuer/IssuerDetails.razor
+++ b/Pages/Issuer/IssuerDetails.razor
@@ -88,8 +88,8 @@
                     </a>
                 </div>
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
-                    <a href="print_issuer_details/@(issuer.UUID)" class="btn btn-lg btn-secondary w-100">
-                        Print
+                    <a href="issuers" class="btn btn-lg btn-secondary w-100">
+                        Back
                     </a>
                 </div>
             </div>
