--- a/Pages/Medicine/MedicineDetails.razor
+++ b/Pages/Medicine/MedicineDetails.razor
@@ -157,8 +157,8 @@
                 </a>
             </div>
             <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
-                <a href="print_medicine_details/@(medicine.UUID)" class="btn btn-lg btn-secondary w-100">
-                    Print
+                <a href="medicines" class="btn btn-lg btn-secondary w-100">
+                    Back
                 </a>
             </div>
         </div>
