--- a/Pages/Administrator/EditAdministrator.razor
+++ b/Pages/Administrator/EditAdministrator.razor
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-md-6 col-sm-12">
                     <div class="card card-body bg-light h-100">
-                        <button disabled="@DisableInput" type="button" @onclick="ForceExpireAccount" class="btn btn-lg btn-danger w-100 h-100">
+                        <button disabled="@DisableInput || @administrator.IsExpired" type="button" @onclick="ForceExpireAccount" class="btn btn-lg btn-danger w-100 h-100">
                             Force password expiry
                         </button>
                     </div>
@@ -95,9 +95,18 @@
                     </button>
                 </div>
                 <div class="col-md-4 col-sm-12 mb-md-0 mb-sm-3">
-                    <button disabled="@DisableInput" type="button" @onclick="DisableAccount" class="btn btn-lg btn-danger w-100">
-                        Disable account
-                    </button>
+                    @if (administrator.IsDisabled)
+                    {
+                        <button disabled="@DisableInput" type="button" @onclick="EnableAccount" class="btn btn-lg btn-success w-100">
+                            Enable account
+                        </button>
+                    }
+                    else
+                    {
+                        <button disabled="@DisableInput" type="button" @onclick="DisableAccount" class="btn btn-lg btn-danger w-100">
+                            Disable account
+                        </button>
+                    }
                 </div>
                 <div class="col-md-4 col-sm-12 mb-md-0 mb-sm-3">
                     <a disabled="@DisableInput" href="administrators" class="btn btn-lg btn-secondary w-100">
@@ -129,6 +138,13 @@
     public async Task DisableAccount()
     {
         administrator.IsDisabled = true;
+
+        await Execute();
+    }
+
+    public async Task EnableAccount()
+    {
+        administrator.IsDisabled = false;
 
         await Execute();
     }
