Fix Enable account on patient

--- a/Pages/Patient/EditPatient.razor
+++ b/Pages/Patient/EditPatient.razor
@@ -168,7 +168,7 @@
 
     public async Task EnableAccount()
     {
-        administrator.IsDisabled = false;
+        patient.IsDisabled = false;
 
         await Execute();
     }
