--- a/Pages/Doctor/EditDoctor.razor
+++ b/Pages/Doctor/EditDoctor.razor
@@ -91,7 +91,7 @@
                 </div>
                 <div class="col-md-6 col-sm-12">
                     <div class="card card-body bg-light h-100">
-                        <button disabled="@DisableInput || @doctor.IsExpired" type="button" @onclick="ForceExpireAccount" class="btn btn-lg btn-danger w-100 h-100">
+                        <button disabled="@(DisableInput || doctor.IsExpired)" type="button" @onclick="ForceExpireAccount" class="btn btn-lg btn-danger w-100 h-100">
                             Force password expiry
                         </button>
                     </div>
